--- a/crates/visored/visored-pipeline/lean4/visored-pipeline-tests/lakefile.toml
+++ b/crates/visored/visored-pipeline/lean4/visored-pipeline-tests/lakefile.toml
@@ -10,6 +10,7 @@ autoImplicit = false
 [[require]]
 name = "mathlib"
 scope = "leanprover-community"
+rev = "v4.15.0-rc1"
 
 [[lean_lib]]
 name = "VisoredPipelineTests"
