--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,6 +159,7 @@ notify-debouncer-mini = "0.5.0"
 notify-debouncer-full = "0.4.0"
 num-bigint = "0.4"
 num-integer = "0.1"
+num-traits = "0.2.19"
 once_cell = "1.20.2"
 openai-api-rs = "5.2.3"
 ordered-float = { version = "4.5.0", features = ["serde"] }
