--- a/crates/visored/visored-baseq-elaborator/Cargo.toml
+++ b/crates/visored/visored-baseq-elaborator/Cargo.toml
@@ -17,6 +17,7 @@ expect-test.workspace = true
 itertools.workspace = true
 num-bigint.workspace = true
 num-integer.workspace = true
+num-traits.workspace = true
 ordered-float.workspace = true
 rustc-hash.workspace = true
 serde.workspace = true
