--- a/crates/visored/visored-mir-expr/Cargo.toml
+++ b/crates/visored/visored-mir-expr/Cargo.toml
@@ -14,6 +14,7 @@ keywords.workspace = true
 [dependencies]
 either.workspace = true
 lazy_static.workspace = true
+num-traits.workspace = true
 rustc-hash.workspace = true
 smallvec.workspace = true
 thiserror.workspace = true
@@ -34,6 +35,7 @@ lisp-show-expr.workspace = true
 husky-control-flow-utils.workspace = true
 husky-print-utils.workspace = true
 husky-tree-utils.workspace = true
+husky-unicode-symbols.workspace = true
 # visored
 visored-annotation.workspace = true
 visored-global-resolution.workspace = true
