--- a/crates/lean/lean-entity-path/Cargo.toml
+++ b/crates/lean/lean-entity-path/Cargo.toml
@@ -15,6 +15,7 @@ keywords.workspace = true
 lazy_static.workspace = true
 smallvec.workspace = true
 # abstractions
+enum-index.workspace = true
 eterned.workspace = true
 salsa = { workspace = true, optional = true }
 # lean
