--- a/crates/visored/visored-mir-expr/Cargo.toml
+++ b/crates/visored/visored-mir-expr/Cargo.toml
@@ -17,6 +17,7 @@ lazy_static.workspace = true
 num-traits.workspace = true
 rustc-hash.workspace = true
 smallvec.workspace = true
+strum.workspace = true
 thiserror.workspace = true
 # abstractions
 idx-arena.workspace = true
